There was some misalignment of elements; the text containers in the Display extended over the edge of the Display box by 10px. Fixed.

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ body {
 
 .textbox {
   margin: 0;
-  padding: 0 0 0 10px;
   height: 15vh;
   max-height: 15vw;
   width: 100vw;
@@ -43,11 +42,13 @@ body {
 }
 
 #display h1 {
+  margin: 0 0 0 10px;
   font-size: 1.4em;
   color: rgb(255, 168, 7);
 }
 
 #display p {
+  margin: 0 0 0 10px;
   font-size: 1em;
   color: rgb(255, 168, 7);
 }
